# SkillForge

./: .env.example  .gitignore  README.md  pyproject.toml  评估NVIDIA的黑客松方向.md
cases/n31/: README.md  candidate_sop_plan.json  expert_review_plan.json  ingest_manifest.json  output_profile.json  pdf_validation_queries.json  pitch_runbook.json  provisional_constraints.json  provisional_fault_injection.json  source_candidate_plan.json  source_manifest.json  training_video_storyboard.json  video_processing.json
config/: final_recording_policy.json  final_recording_storyboard.json  final_rehearsal_policy.json  models.json  official_rules_status.json  official_submission_form_status.json  project_board.json  release_roles.json  submission_article_policy.json
deploy/systemd/: README.md  skillforge-demo.service
docs/: SkillForge任务拆解.md  三分钟路演脚本.md  参赛提交材料.md  官方参考代码复现.md  执行状态.md  最终录屏候选制作.md  架构与数据边界.md  环境与接入.md  现场演示与录屏操作单.md  赛事征文.md  赛事要求对齐矩阵.md  验证记录.md
native/: dgx_frame_features.cu
output/checklist_thumbnails/: manifest.json
output/evaluation/: README.md  runtime_benchmark_dgx.json  runtime_benchmark_local.json
output/presentation/: SkillForge_三分钟路演_v1.pptx  SkillForge_三分钟路演_v2.pptx  SkillForge_三分钟路演_v2.pptx.inspect.ndjson  n31_pitch_readiness_v1.json  星星之火_SkillForge_三分钟路演_v2.pptx  星星之火_SkillForge_三分钟路演_v2.pptx.inspect.ndjson  路演口述稿_星星之火.md
output/submission/: release_manifest_v1.json  submission_article_qa_v1.json  发布包.md
output/video/: n31_training_video_evidence_pack_v1.json  n31_training_video_manifest_v1.json
schemas/: agent_tool_trace.schema.json  asr_correction_session.schema.json  case_output_profile.schema.json  checklist_session.schema.json  checklist_thumbnail_manifest.schema.json  conflict.schema.json  conflict_decision_session.schema.json  demo_mode_parity.schema.json  dgx_visual_compute.schema.json  evidence.schema.json  evidence_locator_response.schema.json  final_recording_build.schema.json  final_recording_policy.schema.json  final_recording_qa.schema.json  final_recording_review.schema.json  final_recording_review_qa.schema.json  final_recording_storyboard.schema.json  final_rehearsal_policy.schema.json  final_rehearsal_qa.schema.json  final_rehearsal_record.schema.json  gold_stage_run.schema.json  grounding_gate_report.schema.json  human_gate_confirmations.schema.json  mobile_checklist.schema.json  multisource_evaluation.schema.json  official_rules_review.schema.json  official_rules_review_qa.schema.json  official_rules_status.schema.json  official_submission_form_status.schema.json  pdf_structure_report.schema.json  pitch_runbook.schema.json  project_board.schema.json  project_board_status.schema.json  public_checkout_reproducibility.schema.json  publication_links_input.schema.json  publication_links_qa.schema.json  reference_material_audit.schema.json  release_bundle_manifest.schema.json  release_bundle_qa.schema.json  release_manifest.schema.json  (+39 more)
scripts/: README.md  build_checklist_thumbnails.py  build_final_recording_candidate.sh  build_n31_agent_trace.sh  build_n31_demo_bundle.py  build_n31_grounding_gate.sh  build_n31_pdf_structure.sh  build_n31_selective_rebuild.sh  build_n31_source_candidates.sh  build_n31_temporal_windows.sh  build_n31_video_previews.sh  build_public_release_bundle.sh  build_release_manifest.sh  check_demo_mode_parity.sh  check_dgx.sh  check_final_recording.sh  check_final_recording_review.sh  check_final_rehearsal.sh  check_native.sh  check_official_rules_review.sh  check_pitch.sh  check_project_board.sh  check_public_checkout.sh  check_publication_links.sh  check_submission.sh  check_submission_article.sh  check_submission_closeout.sh  check_submission_form_packet.sh  check_submission_receipt.sh  check_teacher_he_reference.sh  check_team_roster.sh  check_training_video_review.sh  dgx_demo_tunnel.sh  generate_n31_test_label.py  generate_synthetic_assets.py  manage_dgx_demo_service.sh  manage_human_gates.sh  process_n31_videos.py  run_demo_mode.sh  run_guided_human_review.sh  (+13 more)
src/skillforge/: __init__.py  agent_trace.py  asr.py  asr_corrections.py  candidate_sop.py  case_ingest.py  checklist_sessions.py  cli_hints.py  conflict_adjudication.py  contracts.py  creator.py  demo.py  demo_mode_parity.py  dgx_visual.py  evidence_locator.py  expert_gold.py  final_recording.py  final_recording_build.py  final_recording_review.py  final_rehearsal.py  gold_rehearsal.py  gold_stage_runner.py  grounding_gate.py  guided_human_review.py  human_gates.py  ingest.py  json_tools.py  media.py  media_privacy.py  model_router.py  multisource_eval.py  observability.py  official_rules_review.py  pdf_ingest.py  pdf_structure_report.py  perception.py  pitch.py  planner.py  poster.py  (+31 more)
tests/: test_agent_trace.py  test_asr.py  test_asr_corrections.py  test_candidate_sop.py  test_case_ingest.py  test_cli_hints.py  test_conflict_adjudication.py  test_contracts.py  test_demo_bundle.py  test_demo_mode_parity.py  test_deployment.py  test_dgx_visual.py  test_expert_gold.py  test_final_recording.py  test_final_recording_build.py  test_final_recording_review.py  test_final_rehearsal.py  test_gold_rehearsal.py  test_gold_stage_runner.py  test_grounding_gate.py  test_guided_human_review.py  test_human_gates.py  test_json_tools.py  test_media_privacy.py  test_multisource_eval.py  test_native_ingest.py  test_observability.py  test_official_rules_review.py  test_pdf_ingest.py  test_perception_planner.py  test_pitch.py  test_poster.py  test_project_board.py  test_provisional_rehearsal.py  test_public_checkout.py  test_publication_links.py  test_reference_code.py  test_release_bundle.py  test_release_manifest.py  test_review_sessions.py  (+22 more)
(+59 files in other folders)
