[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skillforge"
version = "0.1.0"
description = "Evidence-grounded, self-revising multimodal training package workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jsonschema>=4.23,<5",
  "pillow>=12.2,<13",
  "pymupdf>=1.24,<2",
  "python-multipart>=0.0.18,<1",
  "reportlab>=4.4,<5",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
]

[project.scripts]
skillforge-demo = "skillforge.demo:main"
skillforge-demo-mode-parity = "skillforge.demo_mode_parity:main"
skillforge-agent-trace = "skillforge.agent_trace:main"
skillforge-dgx-visual = "skillforge.dgx_visual:main"
skillforge-case-ingest = "skillforge.case_ingest:main"
skillforge-candidate-sop = "skillforge.candidate_sop:main"
skillforge-ingest = "skillforge.ingest:main"
skillforge-expert-gold = "skillforge.expert_gold:main"
skillforge-final-rehearsal = "skillforge.final_rehearsal:main"
skillforge-final-recording-build = "skillforge.final_recording_build:main"
skillforge-final-recording-review = "skillforge.final_recording_review:main"
skillforge-gold-rehearsal = "skillforge.gold_rehearsal:main"
skillforge-grounding-gate = "skillforge.grounding_gate:main"
skillforge-human-gates = "skillforge.human_gates:main"
skillforge-multisource-eval = "skillforge.multisource_eval:main"
skillforge-official-rules-review = "skillforge.official_rules_review:main"
skillforge-pdf-structure = "skillforge.pdf_structure_report:main"
skillforge-poster = "skillforge.poster:main"
skillforge-pitch-check = "skillforge.pitch:main"
skillforge-runtime-benchmark = "skillforge.runtime_benchmark:main"
skillforge-release-bundle = "skillforge.release_bundle:main"
skillforge-reference-audit = "skillforge.reference_code:main"
skillforge-selective-rebuild = "skillforge.selective_rebuild:main"
skillforge-semantic-review = "skillforge.semantic_review:main"
skillforge-submission-check = "skillforge.submission:main"
skillforge-submission-closeout = "skillforge.submission_closeout:main"
skillforge-submission-article = "skillforge.submission_article:main"
skillforge-submission-form-packet = "skillforge.submission_form_packet:main"
skillforge-submission-receipt = "skillforge.submission_receipt:main"
skillforge-source-candidates = "skillforge.source_candidates:main"
skillforge-step-discovery = "skillforge.step_discovery:main"
skillforge-step-discovery-eval = "skillforge.step_discovery_eval:main"
skillforge-temporal-windows = "skillforge.temporal_windows:main"
skillforge-training-video = "skillforge.training_video:main"
skillforge-training-video-review = "skillforge.training_video_review:main"
skillforge-video-preview = "skillforge.video_preview:main"
skillforge-provisional-rehearsal = "skillforge.provisional_rehearsal:main"
skillforge-visual-review = "skillforge.visual_review:main"
skillforge-web = "skillforge.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
